# NovomaticTasks

NovomaticTask1/NovomaticTask1/: CMakeLists.txt  NovomaticTask1.cpp  NovomaticTask1.h
NovomaticTask3/: CMakeLists.txt
NovomaticTask3/NovomaticTask3/: CMakeLists.txt  NovomaticTask3.cpp  NovomaticTask3.h  Triangle.cpp  Triangle.h  UserInterface.h
